2005-01-29  Hans-Peter Nilsson  <hp@axis.com>
	* baseboards/cris-sim.exp: New file.

2004-11-19  Nick Clifton  <nickc@redhat.com>
	* lib/libgloss.exp (newlib_include_flags): Document why -isystem
	is used instead of -I.
	(libio_include_flags): Use -I instead of -isystem and
	document why.
	(g++_include_flags): Use -I instead of -isystem.
	(libstdc++_include_flags): Likewise. 

2004-11-04  Ben Elliston  <bje@gnu.org>

	* lib/dg.exp (dg-test): If a `dg-do run' test fails to compile,
	mark the test as unresolved, rather than warning.

2004-10-27  Nick Clifton  <nickc@redhat.com>

	* baseboards/iq2000-sim.exp: New file.

2004-08-20  Daniel Jacobowitz  <dan@debian.org>

	* testglue.c: Prototype abort(3) and exit(3).

2004-08-14  Paul Brook  <paul@codesourcery.com>

	* config/sim.exp (sim_download, sim_upload): New procs.

2004-06-30  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to current revision.
	* config.sub: Likewise.

2004-06-12  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to current revision.
	* config.sub: Likewise.

2004-06-08  Alexandre Oliva  <aoliva@redhat.com>

	* testglue.c: Prototype abort and exit.

from  Alexandre Oliva  <aoliva@redhat.com>
        * baseboards/mn10300-sim.exp: Set needs_status_wrapper to empty
        string.
                                                                                
Tue Feb 25 05:19:57 UTC 2003  Brendan Conoboy  <blc@@redhat.com>

        * lib/remote.exp (call_remote): Remove multilibs from the board
	name when rebooting a board.

2004-0603  Alexandre Oliva  <aoliva@redhat.com>

       * baseboards/mn10300-sim.exp: Set needs_status_wrapper and
       noresults to zero.

2004-06-07  Ben Elliston  <bje@gnu.org>

	* lib/libgloss.exp (build_wrapper): Remove redundant set command.

2004-03-29  Joel Brobecker  <brobecker@gnat.com>

	* lib/libgloss.exp (find_gnatmake): New procedure.
	* lib/target.exp (default_target_compile): Add support for Ada.
