@@ -1,3 +1,9 @@
+2005-03-20  Mark Kettenis  <kettenis@gnu.org>
+
+	* lib/target.exp (prune_warnings): Add linker warning patterns for
+	OpenBSD.
+
+
 2005-01-29  Hans-Peter Nilsson  <hp@axis.com>
 	* baseboards/cris-sim.exp: New file.
 
